# amethyst

./: .gitignore  CMakeLists.txt  README.md  amethyst.cpp
math/: CMakeLists.txt  mathlib.cpp
source/: CMakeLists.txt
source/amethyst/: CMakeLists.txt
source/amethyst/source/: amethyst.cpp
source/core/: CMakeLists.txt
source/core/include/: geometry.h  normal.h  point.h  ray.h  vector.h
source/core/source/: geometry.cpp
source/math/: CMakeLists.txt
source/math/source/: mathlib.cpp  mathlib_private.h
